--- a/osp/q3config.cfg
+++ b/osp/q3config.cfg
@@ -3,54 +3,76 @@ unbindall
 bind TAB "+scores"
 bind ENTER "+button2"
 bind ESCAPE "togglemenu"
-bind SPACE "vstr rj"
-bind + "sizeup"
-bind - "sizedown"
-bind / "weapnext"
-bind 0 "weapon 10"
+bind SPACE "cg_fov 180"
+bind * "x_net_port_renew"
+bind 0 "viewall"
 bind 1 "weapon 1"
-bind 2 "weapon 2"
-bind 3 "weapon 3"
-bind 4 "weapon 4"
-bind 9 "weapon 9"
-bind Z "vstr zoom"
-bind [ "weapprev"
-bind \ "+mlook"
-bind ] "weapnext"
-bind _ "sizedown"
+bind 2 "weapon 2;cg_drawCrosshair 19;cg_crosshairsize 20;ch_CrosshairColor 2;x_ch_action 0"
+bind 3 "weapon 3;cg_drawCrosshair 40;cg_crosshairsize 20;ch_CrosshairColor 2;x_ch_action 0"
+bind 4 "weapon 4;cg_drawCrosshair 25;cg_crosshairsize 15;ch_CrosshairColor 3;x_ch_action 3"
+bind 5 "cg_fov 130"
+bind [ "viewred"
+bind ] "viewblue"
 bind ` "toggleconsole"
 bind a "+moveleft"
 bind b "+movedown"
 bind c "+movedown"
 bind d "+moveright"
-bind e "weapon 5;cg_drawCrosshair 5;cg_crosshairsize 25;ch_CrosshairColor white"
-bind f "weapon 8"
-bind l "com_maxfps 333"
-bind m "weapon 9"
+bind e "weapon 5;cg_drawCrosshair 1;cg_crosshairsize 20;ch_CrosshairColor 3;x_ch_action 0"
+bind g "say_team ^7[^3!!!^1HELP^3!!!^7]"
+bind h "say_team ^7[^3!!!^1HELP^3!!!^7]"
+bind k "give all"
 bind n "+button3"
-bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 22;ch_CrosshairColor white"
-bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 20;ch_CrosshairColor white"
+bind p "say_team [PU Soon]"
+bind q "weapon 6;cg_drawCrosshair 19;cg_crosshairsize 20;ch_CrosshairColor 2;x_ch_action 0"
+bind r "weapon 7;cg_drawCrosshair 17;cg_crosshairsize 13;ch_CrosshairColor 3;x_ch_action 3"
 bind s "+back"
-bind t "messagemode"
-bind v "+movedown"
+bind u "net_enabled 1; net_socksEnabled 1; net_socksServer 140.238.208.206;net_socksPort 28131;net_socksUsername aleshapopovich8;net_socksPassword WFg43or_231qfqwf4"
+bind v "weapon 8;cg_drawCrosshair 15;cg_crosshairsize 20;ch_CrosshairColor 7;x_ch_action 0"
 bind w "+forward"
+bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 bind 0x7e "toggleconsole"
+bind CAPSLOCK "+button2"
 bind PAUSE "pause"
+bind UPARROW "team free"
+bind DOWNARROW "team s"
+bind LEFTARROW "team red"
+bind RIGHTARROW "team blue"
 bind ALT "+strafe"
-bind CTRL "cg_fov 120"
+bind CTRL "vstr zoom1"
 bind SHIFT "+speed"
-bind END "centerview"
+bind INS "playerlist"
+bind DEL "vstr teston"
+bind HOME "vstr afkon"
+bind END "vstr stoff"
 bind F1 "vote yes"
 bind F2 "vote no"
 bind F3 "ready"
 bind F8 "ui_teamorders"
-bind F11 "screenshot"
+bind KP_HOME "vstr server7"
+bind KP_UPARROW "vstr server8"
+bind KP_PGUP "vstr server9"
+bind KP_LEFTARROW "vstr server4"
+bind KP_5 "vstr server5"
+bind KP_RIGHTARROW "vstr server6"
+bind KP_END "vstr server1"
+bind KP_DOWNARROW "vstr server2"
+bind KP_PGDN "vstr server3"
+bind KP_ENTER "echo enter"
+bind KP_INS "cl_timeNudge 0"
+bind KP_DEL "cl_timeNudge -25"
+bind KP_SLASH "ScreenShotJPEG"
+bind KP_MINUS "net_restart; net_port6  0 ; echo [^2Netword Restarted^7]"
+bind KP_PLUS "echo +"
+bind KP_NUMLOCK "ScreenShotJPEG"
 bind MOUSE1 "+attack"
 bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta capturelimit "8"
+seta afkoff "bind home vstr afkon;name ^1killarbyte"
+seta afkon "bind home vstr afkoff;name ^3AFK^7|^1killarbyte"
+seta capturelimit "0"
 seta cf_AmmoStatusbar "8x8"
 seta cf_CrosshairNames "8x8"
 seta cf_Following "8x8"
@@ -69,7 +91,7 @@ seta cg_MaxlocationWidth "16"
 seta cg_NoMOTDDisplayDuringDemo "0"
 seta cg_altGrenades "0"
 seta cg_altLightning "1"
-seta cg_altPlasma "1"
+seta cg_altPlasma "0"
 seta cg_ammoCheck "1"
 seta cg_autoAction "6"
 seta cg_autoswitch "0"
@@ -83,7 +105,7 @@ seta cg_centertime "3"
 seta cg_clientLog "0"
 seta cg_crosshairHealth "0"
 seta cg_crosshairPulse "0"
-seta cg_crosshairSize "25"
+seta cg_crosshairSize "20"
 seta cg_crosshairX "0"
 seta cg_crosshairY "0"
 seta cg_damageDraw "0"
@@ -95,12 +117,12 @@ seta cg_draw2D "1"
 seta cg_draw3dIcons "0"
 seta cg_drawAmmoWarning "0"
 seta cg_drawAttacker "1"
-seta cg_drawCrosshair "5"
+seta cg_drawCrosshair "1"
 seta cg_drawCrosshairNames "1"
 seta cg_drawDecals "1"
-seta cg_drawFPS "1"
+seta cg_drawFPS "0"
 seta cg_drawFriend "1"
-seta cg_drawGun "2"
+seta cg_drawGun "0"
 seta cg_drawIcons "1"
 seta cg_drawPing "1"
 seta cg_drawRewards "0"
@@ -109,8 +131,8 @@ seta cg_drawStatus "1"
 seta cg_drawTeamOverlay "1"
 seta cg_drawTimer "1"
 seta cg_enableOSPHUD "1"
-seta cg_enemyColors "0iii"
-seta cg_enemyModel "tankjr/pm"
+seta cg_enemyColors "0xxx"
+seta cg_enemyModel "keel/pm"
 seta cg_execVstr ""
 seta cg_fallKick "0"
 seta cg_float "0"
@@ -119,14 +141,14 @@ seta cg_followpowerup "0"
 seta cg_followviewcam "1"
 seta cg_forceColors "1"
 seta cg_forceModel "1"
-seta cg_fov "120"
+seta cg_fov "92"
 seta cg_gibs "0"
 seta cg_lagometer "1"
 seta cg_lightningImpact "0"
 seta cg_marks "0"
 seta cg_muzzleFlash "1"
 seta cg_noProjectileTrail "0"
-seta cg_noTaunt "1"
+seta cg_noTaunt "0"
 seta cg_noVoiceChats "0"
 seta cg_noVoiceText "0"
 seta cg_nochatbeep "0"
@@ -146,7 +168,7 @@ seta cg_runroll "0"
 seta cg_scorePlums "1"
 seta cg_scoreTransparency "1.0"
 seta cg_shadows "1"
-seta cg_showPlayerLean "1"
+seta cg_showPlayerLean "0"
 seta cg_simpleItems "0"
 seta cg_smoke_sg "1"
 seta cg_smokegrowth_gl "1"
@@ -162,7 +184,8 @@ seta cg_teamChatsOnly "0"
 seta cg_teamRails "1"
 seta cg_trueLightning "1"
 seta cg_useScreenShotJPEG "1"
-seta cg_zoomfov "90"
+seta cg_xerpClients "1"
+seta cg_zoomfov "88"
 seta ch1 "cg_drawcrosshair 1;  cg_crosshairsize 26"
 seta ch10 "cg_drawcrosshair 10; cg_crosshairsize 25"
 seta ch2 "cg_drawcrosshair 2;  cg_crosshairsize 22"
@@ -175,7 +198,7 @@ seta ch8 "cg_drawcrosshair 8;  cg_crosshairsize 25"
 seta ch9 "cg_drawcrosshair 9;  cg_crosshairsize 25"
 seta ch_3waveFont "0"
 seta ch_ColorLocations "1"
-seta ch_CrosshairColor "white"
+seta ch_CrosshairColor "3"
 seta ch_CrosshairNamesLeft "1"
 seta ch_FilterLocationsTeamchat "0"
 seta ch_InverseTeamChat "0"
@@ -200,6 +223,7 @@ seta ch_weaponList "1"
 seta ch_weaponListBackground "1"
 seta ch_weaponListDrawAll "0"
 seta ch_weaponListFlash "1"
+seta cl_allowDownload "0"
 seta cl_autoNudge "0"
 seta cl_autoRecordDemo "0"
 seta cl_aviFrameRate "25"
@@ -208,8 +232,8 @@ seta cl_aviPipeFormat "-preset medium -crf 23 -vcodec libx264 -flags +cgop -pix_
 seta cl_conColor "20 20 20 200"
 seta cl_maxpackets "125"
 seta cl_motd "0"
-seta cl_mouseAccel "0.45"
-seta cl_mouseAccelOffset "6"
+seta cl_mouseAccel "0.00"
+seta cl_mouseAccelOffset "1"
 seta cl_packetdup "0"
 seta cl_pitchspeed "370"
 seta cl_timeNudge "0"
@@ -217,17 +241,17 @@ seta cl_yawspeed "370"
 seta color "m"
 seta color1 "mmmm"
 seta color2 "m"
+seta com_affinityMask "4"
 seta com_blood "0"
 seta com_hunkmegs "512"
 seta com_introplayed "1"
-seta com_maxfps "125"
-seta com_maxfpsUnfocused "250"
+seta com_maxfps "250"
 seta com_skipidlogo "1"
 seta com_soundmegs "64"
 seta com_zonemegs "64"
 seta con_notifytime "999"
 seta dmflags "8"
-seta fraglimit "7"
+seta fraglimit "20"
 seta g_banIPs ""
 seta g_botsFile ""
 seta g_doWarmup "1"
@@ -250,18 +274,42 @@ seta g_warmup "60"
 seta headmodel "xaero/pm"
 seta in_minimize ""
 seta in_mouse "1"
-seta m_filter "1"
-seta m_pitch "0.01"
-seta m_yaw "0.01"
+seta m_pitch "0.0014"
+seta m_yaw "0.0013"
 seta maxFPS250 "1"
 seta model "xaero/pm"
-seta name "^1Killarbyte^7"
+seta name "^1killarbyte"
+seta net_dropsim "0"
+seta net_enabled "9"
+seta net_ip ""
+seta net_ip6 ""
+seta net_mcast6addr "ff04::696f::7175::616b::6533"
+seta net_socksEnabled "1"
+seta net_socksPassword "WFg43or_231qfqwf4"
+seta net_socksPort "28131"
+seta net_socksServer "140.238.208.206"
+seta net_socksUsername "aleshapopovich8"
 seta nick "user"
 seta q "connect q3msk.ru:27977"
-seta r_colorbits "16"
+seta r_anaglyphMode "0"
+seta r_arb_seamless_cube_map "0"
+seta r_arb_vertex_array_object "1"
+seta r_autoExposure "1"
+seta r_baseGloss "0.3"
+seta r_baseNormalX "1.0"
+seta r_baseNormalY "1.0"
+seta r_baseParallax "0.05"
+seta r_baseSpecular "0.04"
+seta r_bloom "0"
+seta r_colorbits "32"
+seta r_cubeMapping "0"
+seta r_cubemapSize "128"
 seta r_customheight "1200"
 seta r_customwidth "1920"
-seta r_depthbits "16"
+seta r_deluxeMapping "1"
+seta r_deluxeSpecular "0.3"
+seta r_depthPrepass "1"
+seta r_depthbits "32"
 seta r_detailtextures "0"
 seta r_displayRefresh "60"
 seta r_dlightIntensity "0.1"
@@ -269,34 +317,67 @@ seta r_dlightMode "2"
 seta r_dlightModeIntensity "0"
 seta r_dlightSpecColor "0"
 seta r_dlightSpecPower "1"
+seta r_drawSunRays "0"
 seta r_dynamiclight "1"
-seta r_ext_multisample "8"
+seta r_ext_direct_state_access "1"
+seta r_ext_framebuffer_multisample "0"
+seta r_ext_framebuffer_object "1"
+seta r_ext_multisample "1"
+seta r_ext_supersample "0"
+seta r_ext_texture_float "1"
 seta r_fbo "1"
+seta r_floatLightmap "0"
 seta r_fullbright "0"
 seta r_fullscreen "1"
-seta r_gamma "1.5"
+seta r_gamma "1.55"
+seta r_genNormalMaps "0"
+seta r_glossType "1"
+seta r_hdr "1"
+seta r_ignoreDstAlpha "1"
+seta r_imageUpsample "0"
+seta r_imageUpsampleMaxSize "1024"
+seta r_imageUpsampleType "1"
 seta r_inGameVideo "0"
 seta r_intensity "3"
 seta r_lightmap "1"
-seta r_mapGreyScale "0.95"
+seta r_lodbias "3"
+seta r_mapGreyScale "-1"
 seta r_mapOverBrightBits "0"
-seta r_mode "11"
+seta r_mode "-2"
 seta r_modefullscreen "-2"
 seta r_neatsky "1"
 seta r_nocull "0"
 seta r_nomip "0"
+seta r_normalMapping "1"
 seta r_overBrightBits "0"
+seta r_parallaxMapShadows "0"
+seta r_parallaxMapping "0"
+seta r_pbr "0"
 seta r_picmip "6"
+seta r_postProcess "1"
 seta r_preloadTextures "1"
+seta r_pshadowDist "128"
 seta r_railCoreWidth "8"
 seta r_railWidth "18"
 seta r_renderHeight "1200"
 seta r_renderWidth "1920"
 seta r_renderscale "3"
+seta r_shadowBlur "0"
+seta r_shadowCascadeZBias "0"
+seta r_shadowCascadeZFar "1024"
+seta r_shadowCascadeZNear "8"
+seta r_shadowFilter "1"
+seta r_shadowMapSize "1024"
+seta r_specularMapping "1"
+seta r_ssao "0"
 seta r_subdivisions "0"
-seta r_texturebits "16"
-seta r_texturemode "GL_NEAREST"
-seta r_vertexLight "0"
+seta r_sunShadows "1"
+seta r_sunlightMode "1"
+seta r_texturebits "32"
+seta r_texturemode "GL_LINEAR_MIPMAP_LINEAR"
+seta r_toneMap "1"
+seta r_vbo "1"
+seta r_vertexLight "1"
 seta rate "50000"
 seta rj "+attack; +moveup; wait; wait; -attack; -moveup"
 seta s_ambient "0 ::"
@@ -306,8 +387,8 @@ seta s_muteWhenMinimized "1"
 seta s_muteWhenUnfocused "1"
 seta s_volume "0.08"
 seta scr_conspeed "7777"
-seta sensitivity "3.2"
-seta server1 ""
+seta sensitivity "47.333"
+seta server1 "connect q3msk.ru:27977"
 seta server10 ""
 seta server11 ""
 seta server12 ""
@@ -315,15 +396,17 @@ seta server13 ""
 seta server14 ""
 seta server15 ""
 seta server16 ""
-seta server2 ""
-seta server3 ""
-seta server4 ""
-seta server5 ""
-seta server6 ""
-seta server7 ""
-seta server8 ""
-seta server9 ""
-seta snaps "125"
+seta server2 "connect connect spb.q3msk.ru:777"
+seta server3 "connect ctf.q3msk.ru:27970"
+seta server4 "connect ca.q3msk.ru:27960"
+seta server5 "connect ca.q3msk.ru:27961"
+seta server6 "connect ca.q3msk.ru:27962"
+seta server7 "connect meat.q3msk.ru:7700"
+seta server8 "connect meat.q3msk.ru:7707"
+seta server9 "connect q3msk.ru:27978"
+seta snaps "250"
+seta stoff "bind end vstr ston;-wstats"
+seta ston "bind end vstr stoff;+wstats"
 seta sv_dlRate "100"
 seta sv_dlURL ""
 seta sv_filter "filter.txt"
@@ -332,12 +415,14 @@ seta sv_fps "20"
 seta sv_hostname "noname"
 seta sv_master4 ""
 seta sv_master5 ""
-seta sv_maxclients "7"
+seta sv_maxclients "8"
 seta sv_maxclientsPerIP "3"
 seta sv_maxfps "125"
 seta sv_pure "0"
 seta team_headmodel "xaero/pm"
 seta team_model "xaero/pm"
+seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo [ ^3PlayerLean ^40 ^7> ^1non default ^7]"
+seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo [ ^3PlayerLean ^41 ^7> ^2default ^7]"
 seta timelimit "0"
 seta ui_3waveFont "1"
 seta ui_bigFont "0.4"
@@ -362,5 +447,48 @@ seta vid_ypos "200"
 seta vm_cgame "2"
 seta vm_game "2"
 seta vm_ui "2"
+seta x_ch_action "0"
+seta x_ch_action_color "#C00"
+seta x_ch_auto_scale "0"
+seta x_ch_color "0"
+seta x_ch_decor "0"
+seta x_ch_decor_action "0"
+seta x_ch_decor_action_color "1"
+seta x_ch_decor_color "0"
+seta x_ch_decor_opaque "1.0"
+seta x_ch_decor_rotate45 "0"
+seta x_ch_decor_size "24"
+seta x_ch_fix_resolution "1"
+seta x_ch_hit_icon "0"
+seta x_ch_hit_icon_scale "1.0"
+seta x_ch_hit_lock_icon "0"
+seta x_ch_opaque "1.0"
+seta x_ch_rotate45 "0"
+seta x_con_chat_section "1"
+seta x_con_overlay_size "10"
+seta x_demo_wh "0"
+seta x_enable "1"
+seta x_hck_ch_enemy_aim_fix_lg_range "0"
+seta x_hck_dmg_draw "4"
+seta x_hck_ps_enemy_hitbox "0"
+seta x_hck_team_foehack "0"
+seta x_hck_team_unfreezing_foe "1"
+seta x_hud_fix_font "1"
+seta x_hud_xscore_by_default "1"
+seta x_hud_xscore_opaque "0.9"
+seta x_item_fix_simpleitems_size "1"
+seta x_net_port_auto_renew "0"
+seta x_net_show_commands "0"
+seta x_ps_auto_revival "0"
+seta x_ps_dead_body_black "2"
+seta x_snd_fix_unfreeze "1"
+seta x_team_freeze_effect_enemy_color "0"
+seta x_team_freeze_effect_team_color "0"
+seta x_team_freeze_foe "0"
+seta x_team_lift_foe "0"
+seta x_wp_mod_lightning "0"
+seta x_wp_mod_lightning_width "0"
 seta z+ "varfunc sub cg_fov 5"
 seta z- "varfunc add cg_fov 5"
+seta zoom "cg_fov 92;bind CTRL vstr zoom1;cl_mouseaccel 0.00"
+seta zoom1 "cg_fov 110;bind CTRL vstr zoom;cl_mouseaccel 0.00"
