--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -5,7 +5,7 @@ unbindall
 // Player
 seta name "^1Killarbyte^7"
 seta nick "user"
-seta cg_enemyModel "tankjr/pm"//keel/pm
+seta cg_enemyModel "keel/pm"//keel/pm
 seta cg_enemyColors "0xxx"
 seta model "xaero/pm" //xaero/pm
 seta headmodel "xaero/pm"
@@ -75,18 +75,18 @@ seta cl_pitchspeed "370"
 
 // weapon
 bind 1 "weapon 1"
-bind 2 "weapon 2;cg_drawCrosshair 41;cg_crosshairsize 13;ch_CrosshairColor 3"
-bind 3 "weapon 3;cg_drawCrosshair 27;cg_crosshairsize 20;ch_CrosshairColor green"
-bind 4 "weapon 4;cg_drawCrosshair 25;cg_crosshairsize 15;ch_CrosshairColor 3"
+bind 2 "weapon 2;cg_drawCrosshair 19;cg_crosshairsize 20;ch_CrosshairColor 2;x_ch_action 0"
+bind 3 "weapon 3;cg_drawCrosshair 40;cg_crosshairsize 20;ch_CrosshairColor 2;x_ch_action 0"
+bind 4 "weapon 4;cg_drawCrosshair 25;cg_crosshairsize 15;ch_CrosshairColor 3;x_ch_action 3"
 
-bind e "weapon 5;cg_drawCrosshair 48;cg_crosshairsize 20;ch_CrosshairColor 3"
-bind q "weapon 6;cg_drawCrosshair 41;cg_crosshairsize 13;ch_CrosshairColor 3"
-bind r "weapon 7;cg_drawCrosshair 41;cg_crosshairsize 13;ch_CrosshairColor 3"
-bind v "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
+bind e "weapon 5;cg_drawCrosshair 1;cg_crosshairsize 20;ch_CrosshairColor 3;x_ch_action 0"
+bind q "weapon 6;cg_drawCrosshair 19;cg_crosshairsize 20;ch_CrosshairColor 2;x_ch_action 0"
+bind r "weapon 7;cg_drawCrosshair 17;cg_crosshairsize 13;ch_CrosshairColor 3;x_ch_action 3"
+bind v "weapon 8;cg_drawCrosshair 15;cg_crosshairsize 20;ch_CrosshairColor 7;x_ch_action 0"
 
 // Zoom
-seta zoom "cg_fov 93;bind CTRL vstr zoom1;cl_mouseaccel 0.58"
-seta zoom1 "cg_fov 115;bind CTRL vstr zoom;cl_mouseaccel 0.58"
+seta zoom "cg_fov 92;bind CTRL vstr zoom1;cl_mouseaccel 0.00"
+seta zoom1 "cg_fov 110;bind CTRL vstr zoom;cl_mouseaccel 0.00"
 bind CTRL "vstr zoom"
 bind SPACE "cg_fov 180"
 
@@ -146,7 +146,7 @@ bind kp_plus "echo +"
 bind kp_numlock "ScreenShotJPEG"
 bind kp_slash "ScreenShotJPEG"
 bind * "x_net_port_renew"
-bind kp_minus "net_restart; net_port6 "0"; echo [^2Netword Restarted^7]"
+bind kp_minus "net_enable 1;net_restart; net_port6 "0"; echo [^2Netword Restarted^7]"
 bind kp_ins "cl_timeNudge 0"
 bind kp_del "cl_timeNudge -25"
 bind kp_enter "echo enter"
