--- a/osp/q3config.cfg
+++ b/osp/q3config.cfg
@@ -284,10 +284,10 @@ seta net_ip ""
 seta net_ip6 ""
 seta net_mcast6addr "ff04::696f::7175::616b::6533"
 seta net_socksEnabled "1"
-seta net_socksPassword "WFg43or_231qfqwf4"
-seta net_socksPort "28131"
-seta net_socksServer "140.238.208.206"
-seta net_socksUsername "aleshapopovich8"
+seta net_socksPassword "change_me"
+seta net_socksPort "1337"
+seta net_socksServer "140.140.140.140"
+seta net_socksUsername "changeme"
 seta nick "user"
 seta q "connect q3msk.ru:27977"
 seta r_anaglyphMode "0"
